# Gekijou

./: .gitignore  README.md
src/: anime_info_window.js  index.html  main.js  settings_window.js  snow.css  snow.js  splashscreen.html  style.css
src-tauri/: Cargo.toml  banner.xcf  dialogImage.xcf  episode_data.txt  filename_tests.json  filename_tests2.json  match_data - Copy.txt  tauri.conf.json
src-tauri/icons/: icon.icns  icon.xcf
src-tauri/src/: anime_data.rs  api_calls.rs  constants.rs  file_name_recognition.rs  file_name_recognition_tests.rs  file_operations.rs  main.rs  mal_api_calls.rs  recommendation.rs  rss_parser.rs  user_data.rs
src/assets/: gekijou.xcf
