[package]
name = "gekijou"
version = "0.3.0"
description = "A multiplatform user interface for browsing and watching anime on your computer"
authors = ["CoolLaugh"]
license = "GNU GENERAL PUBLIC LICENSE"
repository = "https://github.com/CoolLaugh/Gekijou"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = {version = "1.2", features = ["dialog-all", "fs-all"] }
reqwest = { version = "0.11.12", features = ["json"] }
lazy_static = "1.4.0"
regex = "1"
strsim = "0.10.0"
open = "3"
window_titles = { git = "https://github.com/HiruNya/window_titles" }
chrono = "0.4"
dirs = "4.0"
xml-rs = "0.8.4"
walkdir = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
